--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Only for backend testing
+client_secret_76922283431-11olbqs5uu5fmq37m33svsrlam19pnt5.apps.googleusercontent.com.json
